[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/items/atlas.tres" type="Texture2D" id=1]
[ext_resource path="res://resources/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/ui/tower-description.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/military_font_7.tres" type="FontFile" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 161, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 481, 323, 32, 32 )

[node name="TowerDescriptionPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
minimum_size = Vector2( 200, 200 )
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 33.0
offset_top = 33.0
offset_right = 1567.0
offset_bottom = 867.0
mouse_filter = 2
custom_constants/offset_right = 10
custom_constants/offset_top = 10
custom_constants/offset_left = 10
custom_constants/offset_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 1524.0
offset_bottom = 824.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_right = 1514.0
offset_bottom = 770.0
mouse_filter = 2
size_flags_vertical = 3

[node name="TowerName" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
offset_right = 1514.0
offset_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.886275, 1, 0.27451, 1 )
text = "Bombard"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerDescription" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
offset_top = 38.0
offset_right = 1514.0
offset_bottom = 72.0
custom_fonts/font = ExtResource( 4 )
text = "Bombards ground enemies dealing area damage."
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 780.0
offset_right = 1514.0
offset_bottom = 814.0
mouse_filter = 2
custom_constants/separation = 5

[node name="AttackPowerContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
offset_right = 754.0
offset_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackPowerContainer"]
offset_right = 32.0
offset_bottom = 34.0
minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackPowerContainer"]
offset_left = 36.0
offset_right = 754.0
offset_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.886275, 1, 0.27451, 1 )
text = "8-15"

[node name="AttackSpeedContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
offset_left = 759.0
offset_right = 1514.0
offset_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackSpeedContainer"]
offset_right = 32.0
offset_bottom = 34.0
minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = SubResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/AttackSpeedContainer"]
offset_left = 36.0
offset_right = 755.0
offset_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.886275, 1, 0.27451, 1 )
text = "very slow"
__meta__ = {
"_editor_description_": ""
}
